project1 bug fixed

--- a/Project1/contact.html
+++ b/Project1/contact.html
@@ -175,6 +175,7 @@ xhttp.send(JSON.stringify(employee));
             <ul class="nav-links">
                 <li><a href="employee.html">Tuition Reimbursement</a></li>
                 <li><a href="contact.html">Contact Information</a></li>
+                <li><a href="login.html">Log in</a></li>
             </ul>
 
     </nav>
