--- a/Project1/employee.html
+++ b/Project1/employee.html
@@ -220,7 +220,7 @@ xhttp.send(JSON.stringify(training));
             <div class="input_field">
             <label for="types">Choose the type of Training</label>
             <select name="types" id="types">
-              <option value="univ">Univercity Courses</option>
+              <option value="univ">University Courses</option>
               <option value="sem">Seminars</option>
               <option value="cpc">Certification Preparation Classes</option>
               <option value="cert">Certification</option>
