Project 1 added selenium

--- a/Project1/contact.html
+++ b/Project1/contact.html
@@ -177,7 +177,7 @@ xhttp2.send(JSON.stringify(employee));
                 <li><a href="employee.html">Tuition Reimbursement</a></li>
                 <li><a href="result.html">Pending/Completed</a></li>
                 <li><a href="contact.html">Contact Information</a></li>
-                <li><a href="login.html">Log in</a></li>
+                <li><a href="login.html" id="login">Log in</a></li>
             </ul>
 
     </nav>
@@ -241,7 +241,7 @@ xhttp2.send(JSON.stringify(employee));
         </div>
 
         <div class="btn">
-            <input type="submit" onclick="go()" class="sub" value="UPDATE">
+            <input type="submit" id="sub" onclick="go()" class="sub" value="UPDATE">
         </div>
 
         <p id="success"></p>
