--- a/Project1/login.html
+++ b/Project1/login.html
@@ -99,7 +99,7 @@ xhr.send();
                 <input id="pass" type="password" name="password" class="form-control">
             </div>
             <div class="btn">
-                <input type="submit" onclick="getLogin()" class="sub" value="LOGIN">
+                <input type="submit" id="btn" onclick="getLogin()" class="sub" value="LOGIN">
             </div>
 
             
