--- a/Project1/result.html
+++ b/Project1/result.html
@@ -33,7 +33,7 @@
                 <ul class="nav-links">
                     <li><a href="employee.html">Tuition Reimbursement</a></li>
                     <li><a href="result.html">Pending/Completed</a></li>
-                    <li><a href="contact.html">Contact Information</a></li>
+                    <li><a href="contact.html" id="contact">Contact Information</a></li>
                     <li><a href="login.html">Log in</a></li>
                     
                 </ul>
