--- a/Project1/management.html
+++ b/Project1/management.html
@@ -31,7 +31,7 @@
                 <li><a href="employee.html">Tuition Reimbursement</a></li>
                 <li><a href="result.html">Pending/Completed</a></li>
                 <li><a href="contact.html">Contact Information</a></li>
-                <li><a href="login.html">Log in</a></li>
+                <li><a href="login.html" id="login">Log in</a></li>
                 
             </ul>
 
@@ -158,7 +158,7 @@ deniedByBC = data.deniedByBC;
 approvedByDS = data.approvedByDS;
 approvedByDH = data.approvedByDH;
 approvedByBC = data.approvedByBC;
-approvedByGrade = data.approvedByGrade;
+Grade = data.Grade;
 deniedByDS = data.deniedByDS;
 deniedByDH = data.deniedByDH;
 deniedByBC = data.deniedByBC;
@@ -175,7 +175,7 @@ if(position == "Direct Supervisor" && departmenthead != true && AorD == 2){
 deniedByReason: reason,
 additionalInfo: ai,
 approvedByDS: approvedByDS,
-approvedByGrade: approvedByGrade,
+Grade: Grade,
 deniedByDS: deniedByDS,
 deniedByDH: deniedByDH,
 deniedByBC: deniedByBC,
@@ -204,7 +204,7 @@ deniedByReason: reason,
 additionalInfo: ai,
 approvedByDS: approvedByDS,
 approvedByDH: approvedByDH,
-approvedByGrade: approvedByGrade,
+Grade: Grade,
 deniedByDS: deniedByDS,
 deniedByDH: deniedByDH,
 deniedByBC: deniedByBC,
@@ -241,7 +241,7 @@ if(position == "Direct Supervisor" && departmenthead != true && AorD == 1){
 deniedByReason: reason,
 additionalInfo: ai,
 approvedByDS: approvedByDS,
-approvedByGrade: approvedByGrade,
+Grade: Grade,
 deniedByDS: deniedByDS,
 deniedByDH: deniedByDH,
 deniedByBC: deniedByBC,
@@ -269,7 +269,7 @@ deniedByReason: reason,
 additionalInfo: ai,
 approvedByDS: approvedByDS,
 approvedByDH: approvedByDH,
-approvedByGrade: approvedByGrade,
+Grade: Grade,
 deniedByDS: deniedByDS,
 deniedByDH: deniedByDH,
 deniedByBC: deniedByBC,
@@ -294,7 +294,7 @@ deniedByReason: reason,
 additionalInfo: ai,
 approvedByDS: approvedByDS,
 approvedByDH: approvedByDH,
-approvedByGrade: approvedByGrade,
+Grade: Grade,
 deniedByDS: deniedByDS,
 deniedByDH: deniedByDH,
 deniedByBC: deniedByBC,
@@ -589,7 +589,7 @@ input1.onclick = function(){sub1(1,trainid);setTimeout(function(){ pop(); }, 100
 const input2 = document.createElement("input");
 input2.setAttribute("value", "APPROVE");
 input2.setAttribute("type", "submit");
-input2.setAttribute("id", "a");
+input2.setAttribute("id", "appp");
 input2.onclick = function(){sub1(2,trainid);setTimeout(function(){ pop(); }, 1000);};
 
 
